<resources>
    <string name="app_name">NUCLibraryAndroid</string>
    <string name="action_settings">Settings</string>
    
    <string name="main_my"/>
    <string name="main_locale"/>
    <string name="main_appointment"/>
    <string name="main_setting"/>

    <string name="splash_text1">NUC</string>
    <string name="splash_text2">座位预约系统</string>

    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="psw_again_hint">请再次输入密码</string>
    <string name="code_hint">验证码</string>
    <string name="get_code_hint">获取验证码</string>
    <string name="phoneNum_hint">手机号码</string>
    <string name="school_hint">学校</string>
    <string name="major_hint">专业</string>
    <string name="register_hint">注册</string>
    <string name="login_hint">登录</string>
    <string name="revise_hint">修改密码</string>

    <string name="error_null">不能为空</string>
    <string name="login_error_psw_no_match">密码错误</string>
    <string name="revise_error_psw2_eq">重复密码不相同</string>

    <string name="setting_notice">公告</string>
    <string name="setting_me">我</string>
    <string name="setting_revise">修改密码</string>
    <string name="setting_about">关于我们</string>

    <string name="me_title">今日预约</string>
</resources>
