<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:hint="@string/username_hint"
        android:background="#FFFF"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_username_login"/>
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#dadada"
        android:id="@+id/hint"
        android:layout_below="@id/edit_username_login"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <EditText
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/password_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/hint"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_password_login"/>

    <Button
        android:id="@+id/login"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:gravity="center"
        android:text="@string/login_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/google_yellow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_password_login"
        android:layout_alignParentStart="true" />

    <TextView
        android:textColor="@color/color_white"
        android:text="@string/register_hint"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login"
        android:layout_centerVertical="true" />
</RelativeLayout>
