<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/revise_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/revise_psw_wrapper"
        android:layout_below="@+id/bar_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/revise_psw"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/revise_psw2_wrapper"
        android:layout_below="@+id/revise_psw_wrapper"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/revise_psw2"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:hint="@string/psw_again_hint"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/revise_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_below="@+id/revise_psw2_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/google_yellow"
        android:text="@string/revise_hint"
        android:textColor="@color/color_white"
        android:textSize="20sp" />

</RelativeLayout>
