<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/setting_me"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:text="@string/setting_me"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/setting_me_detail"
                android:src="@drawable/ic_chevron_right_grey_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </RelativeLayout>

        <TextView
            android:background="@color/color_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:id="@+id/setting_revise"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:text="@string/setting_revise"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/setting_revise_detail"
                android:src="@drawable/ic_chevron_right_grey_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </RelativeLayout>

        <TextView
            android:background="@color/color_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:id="@+id/setting_notice"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:text="@string/setting_notice"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/setting_notice_detail"
                android:src="@drawable/ic_chevron_right_grey_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </RelativeLayout>

        <TextView
            android:background="@color/color_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:id="@+id/setting_about"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:text="@string/setting_about"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/setting_about_detail"
                android:src="@drawable/ic_chevron_right_grey_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </RelativeLayout>

        <TextView
            android:background="@color/color_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>